# nose

./: Cargo.toml  README.md  idea.md
docs/superpowers/plans/: 2026-03-22-nose-implementation.md
docs/superpowers/specs/: 2026-03-22-nose-design.md
src/: discovery.rs  error.rs  event.rs  lib.rs  main.rs  offset.rs  output.rs  stats.rs  watch.rs
src/adapter/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  hook.rs  mod.rs
src/hooks/: handler.rs  install.rs  mod.rs  uninstall.rs
src/hooks/config/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs
tests/: claude_adapter_test.rs  codex_adapter_test.rs  copilot_adapter_test.rs  cursor_adapter_test.rs  discovery_test.rs  event_test.rs  gemini_adapter_test.rs  hook_adapter_test.rs  hooks_test.rs  integration_test.rs  offset_test.rs  stats_test.rs  watch_test.rs
tests/fixtures/claude/: simple_session.jsonl  tool_use_session.jsonl
tests/fixtures/codex/: file_ops_session.jsonl  simple_session.jsonl  tool_use_session.jsonl
tests/fixtures/copilot/: error_session.jsonl  file_ops_session.jsonl  simple_session.jsonl  tool_use_session.jsonl
tests/fixtures/cursor/: mcp_session.jsonl  no_stop_session.jsonl  simple_session.jsonl  tool_use_session.jsonl
tests/fixtures/gemini/: error_session.jsonl  simple_session.jsonl  tool_use_session.jsonl
